@@ -14,6 +14,8 @@
  * 3/2/10
  * 	- gtkdoc
  * 	- more cleanups
+ * 1/10/10
+ * 	- support complex (just double the bands)
  */
 
 /*
@@ -50,7 +52,6 @@
 #include <stdio.h>
 #include <stdlib.h>
 #include <limits.h>
-#include <assert.h>
 
 #include <vips/vips.h>
 
@@ -223,7 +224,8 @@ conv_gen( REGION *or, void *vseq, void *a, void *b )
 	int le = r->left;
 	int to = r->top;
 	int bo = IM_RECT_BOTTOM(r);
-	int osz = IM_REGION_N_ELEMENTS( or );
+	int osz = IM_REGION_N_ELEMENTS( or ) * 
+		(vips_bandfmt_iscomplex( in->BandFmt ) ? 2 : 1);
 
 	Rect s;
 	int lskip;
@@ -256,12 +258,14 @@ conv_gen( REGION *or, void *vseq, void *a, void *b )
 		case IM_BANDFMT_INT:    
 			CONV_FLOAT( signed int, float ); break;
 		case IM_BANDFMT_FLOAT:  
+		case IM_BANDFMT_COMPLEX:  
 			CONV_FLOAT( float, float ); break;
 		case IM_BANDFMT_DOUBLE: 
+		case IM_BANDFMT_DPCOMPLEX:  
 			CONV_FLOAT( double, double ); break;
 
 		default:
-			assert( 0 );
+			g_assert( 0 );
 		}
 	}
 
@@ -277,7 +281,6 @@ im_convsep_f_raw( IMAGE *in, IMAGE *out, DOUBLEMASK *mask )
 	 */
 	if( im_piocheck( in, out ) ||
 		im_check_uncoded( "im_convsep_f", in ) ||
-		im_check_noncomplex( "im_convsep_f", in ) || 
 		im_check_dmask( "im_convsep_f", mask ) ) 
 		return( -1 );
 	if( mask->xsize != 1 && mask->ysize != 1 ) {
@@ -331,8 +334,7 @@ im_convsep_f_raw( IMAGE *in, IMAGE *out, DOUBLEMASK *mask )
  * The mask must be 1xn or nx1 elements. 
  * The output image 
  * is always %IM_BANDFMT_FLOAT unless @in is %IM_BANDFMT_DOUBLE, in which case
- * @out is also %IM_BANDFMT_DOUBLE. Non-complex images
- * only.
+ * @out is also %IM_BANDFMT_DOUBLE. 
  *
  * The image is convolved twice: once with @mask and then again with @mask 
  * rotated by 90 degrees. This is much faster for certain types of mask
