@@ -30,6 +30,7 @@
 - added im_draw_point(), moved im_plotpoint() to deprecated
 - added im_read_point(), now partial, moved im_readpoint() to deprecated
 - added im_draw_smudge(), moved im_smudge() / im_smear() to deprecated
+- convolution functions support complex images
 
 12/5/10 started 7.22.2
 - the conditional image of ifthenelse can be any format, a (!=0) is added if
